--- a/final/style.css
+++ b/final/style.css
@@ -2,3 +2,21 @@ section {
     color: white;
     background-color: black;
 }
+
+.prefix-filter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.cssshort-section {
+    text: #333 bold justify uppercase 1.25em 1.7 .05em;
+}
+
+.cssnext-link {
+    color: rgba(0, 0, 255, 0.9);
+}
+
+.cssnext-link:hover {
+    color: rgb(51, 33, 0);
+}
